Fix z-index for popover - more events

--- a/src/pages/CalendarPage/ui/CalendarPage/CalendarPage.module.scss
+++ b/src/pages/CalendarPage/ui/CalendarPage/CalendarPage.module.scss
@@ -93,4 +93,8 @@
    .fc-v-event {
       border: rem(3) solid var(--fc-event-border-color);
    }
+
+   .fc .fc-popover {
+      z-index: 99;
+   }
 }
